--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ p {
   
   font-size: 1.8em;
   font-weight: bold;
-  color: rgb(255, 36, 255);
+  color: yellow;
   margin-bottom: 30px;
   margin-top: 30px;
 }
@@ -39,7 +39,7 @@ canvas {
   border: 1px solid gray;  
 }
 
-input[type="button"], button {
+input[type="button"] {
   background-color: #16f51e; /* Green */
   border: none;
   color:rgb(216, 29, 216);
@@ -54,4 +54,19 @@ input[type="button"], button {
   border-radius: 5px;
   /*box-shadow: 0 9px rgb(233, 245, 63);*/
   box-shadow: 5px 5px blue, 10px 10px red, 15px 15px rgb(247, 243, 31);
+}
+
+button {
+  background-color: grey; /* Green */
+  border: 2px solid whitesmoke;
+  color: grey;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 5px;
 }
